y.output
Terminales no usados en la gramática

   BLITERAL


Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO BPUNTO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal BCOMENTARIO

    3 bloque_alg: bloque BCOMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_const decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_const declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: BTIPO lista_d_tipo BFTIPO BPUNTO_Y_COMA

   16 declaracion_const: BCONST lista_d_cte BFCONST BPUNTO_Y_COMA

   17 declaracion_var: BVAR lista_d_var BFVAR BPUNTO_Y_COMA

   18 lista_d_tipo: BIDENTIFICADOR BIGUAL d_tipo BPUNTO_Y_COMA lista_d_tipo
   19             | %empty

   20 d_tipo: BTUPLA lista_campos BFTUPLA
   21       | BTABLA BCORCHETE_APERTURA expresion_t BPUNTOSS expresion_t BCORCHETE_CIERRE BDE d_tipo
   22       | BIDENTIFICADOR
   23       | expresion_t BPUNTOSS expresion_t
   24       | BREF d_tipo
   25       | BTIPO_BASE

   26 expresion_t: expresion
   27            | BLITERAL_CARACTER

   28 lista_campos: BIDENTIFICADOR BDOS_PUNTOS d_tipo BPUNTO_Y_COMA lista_campos
   29             | %empty

   30 lista_d_cte: BIDENTIFICADORB BIGUAL exp_b BPUNTO_Y_COMA lista_d_cte
   31            | BIDENTIFICADOR BIGUAL BLITERAL_ENTERO BPUNTO_Y_COMA lista_d_cte
   32            | BIDENTIFICADOR BIGUAL BLITERAL_REAL BPUNTO_Y_COMA lista_d_cte
   33            | BIDENTIFICADOR BIGUAL BLITERAL_CARACTER BPUNTO_Y_COMA lista_d_cte
   34            | BIDENTIFICADOR BIGUAL BLITERAL_CADENA BPUNTO_Y_COMA lista_d_cte
   35            | %empty

   36 lista_d_var_entrada: lista_id_entrada BPUNTO_Y_COMA lista_d_var_entrada
   37                    | %empty

   38 lista_d_var_salida: lista_id_salida BPUNTO_Y_COMA lista_d_var_salida
   39                   | %empty

   40 lista_d_var: lista_id BPUNTO_Y_COMA lista_d_var
   41            | %empty

   42 lista_id_entrada: BIDENTIFICADOR BDOS_PUNTOS d_tipo
   43                 | BIDENTIFICADOR BCOMA lista_id_entrada

   44 lista_id_salida: BIDENTIFICADOR BDOS_PUNTOS d_tipo
   45                | BIDENTIFICADOR BCOMA lista_id_salida

   46 lista_id: BIDENTIFICADOR BDOS_PUNTOS d_tipo
   47         | BIDENTIFICADOR BCOMA lista_id

   48 decl_ent_sal: decl_ent
   49             | decl_ent decl_sal
   50             | decl_sal

   51 decl_ent: BENT lista_d_var_entrada

   52 decl_sal: BSAL lista_d_var_salida

   53 expresion: exp_a
   54          | funcion_ll

   55 asignacion_booleana: operando_booleano BDOS_PUNTOS_IGUAL exp_b

   56 exp_a: exp_a BSUMA exp_a
   57      | exp_a BMENOS exp_a
   58      | exp_a BPOR exp_a
   59      | exp_a BENTRE exp_a
   60      | exp_a BMOD exp_a
   61      | exp_a BDIV exp_a
   62      | BPARENTESIS_APERTURA exp_a BPARENTESIS_CIERRE
   63      | operando
   64      | BLITERAL_REAL
   65      | BLITERAL_ENTERO
   66      | BMENOS exp_a
   67      | BSUMA exp_a

   68 exp_b: exp_b BY M exp_b
   69      | exp_b BO M exp_b
   70      | BNO exp_b
   71      | operando_booleano
   72      | BVERDADERO
   73      | BFALSO
   74      | BPARENTESIS_APERTURA exp_b BPARENTESIS_CIERRE
   75      | exp_a BIGUAL exp_a
   76      | exp_a BMAYOR exp_a
   77      | exp_a BMENOR exp_a
   78      | exp_a BDIFERENTE exp_a
   79      | exp_a BMAYORIGUAL exp_a
   80      | exp_a BMENORIGUAL exp_a

   81 operando: BIDENTIFICADOR
   82         | operando BPUNTO operando
   83         | operando BCORCHETE_APERTURA expresion BCORCHETE_CIERRE
   84         | operando BREF

   85 operando_booleano: BIDENTIFICADORB

   86 instrucciones: instruccion BPUNTO_Y_COMA instrucciones
   87              | instruccion

   88 instruccion: BCONTINUAR
   89            | asignacion
   90            | asignacion_booleana
   91            | alternativa
   92            | iteracion

   93 asignacion: operando BDOS_PUNTOS_IGUAL expresion
   94           | expresion

   95 alternativa: BSI expresion BENTONCES instrucciones lista_opciones BFSI

   96 lista_opciones: BSINO expresion BENTONCES instrucciones lista_opciones
   97               | %empty

   98 iteracion: it_cota_fija
   99          | it_cota_exp

  100 it_cota_exp: BMIENTRAS expresion BHACER instrucciones BFMIENTRAS

  101 it_cota_fija: BPARA BIDENTIFICADOR BDOS_PUNTOS_IGUAL expresion BHASTA expresion BHACER instrucciones BFPARA

  102 accion_d: BACCION a_cabecera bloque BFACCION

  103 funcion_d: BFUNCION f_cabecera bloque BDEV expresion BFFUNCION

  104 a_cabecera: BIDENTIFICADOR BPARENTESIS_APERTURA d_par_form BPARENTESIS_CIERRE BPUNTO_Y_COMA

  105 f_cabecera: BIDENTIFICADOR BPARENTESIS_APERTURA lista_d_var BPARENTESIS_CIERRE BDEF d_tipo BPUNTO_Y_COMA

  106 d_par_form: d_p_form BPUNTO_Y_COMA d_par_form
  107           | %empty

  108 d_p_form: BEND lista_id BDOS_PUNTOS d_tipo
  109         | BSAL lista_id BDOS_PUNTOS d_tipo
  110         | BES lista_id BDOS_PUNTOS d_tipo

  111 funcion_ll: BIDENTIFICADOR BPARENTESIS_APERTURA l_ll BPARENTESIS_CIERRE

  112 l_ll: expresion BCOMA l_ll
  113     | expresion

  114 M: %empty


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
BALGORITMO <valor_texto> (258) 1
BIDENTIFICADOR <valor_texto> (259) 1 18 22 28 31 32 33 34 42 43 44
    45 46 47 81 101 104 105 111
BPUNTO_Y_COMA <valor_texto> (260) 1 15 16 17 18 28 30 31 32 33 34 36
    38 40 86 104 105 106
BFALGORITMO <valor_texto> (261) 1
BPUNTO <valor_texto> (262) 1 82
BCOMENTARIO <valor_texto> (263) 2 3
BTIPO <valor_texto> (264) 15
BFTIPO <valor_texto> (265) 15
BCONST <valor_texto> (266) 16
BFCONST <valor_texto> (267) 16
BVAR <valor_texto> (268) 17
BFVAR <valor_texto> (269) 17
BIGUAL <valor_texto> (270) 18 30 31 32 33 34 75
BTUPLA <valor_texto> (271) 20
BFTUPLA <valor_texto> (272) 20
BTABLA <valor_texto> (273) 21
BCORCHETE_APERTURA <valor_texto> (274) 21 83
BDE <valor_texto> (275) 21
BEND <valor_texto> (276) 108
BLITERAL <valor_texto> (277)
BDEF <valor_texto> (278) 105
BREF <valor_texto> (279) 24 84
BTIPO_BASE <valor_texto> (280) 25
BPUNTOSS <valor_texto> (281) 21 23
BLITERAL_CARACTER <valor_texto> (282) 27 33
BCORCHETE_CIERRE <valor_texto> (283) 21 83
BDOS_PUNTOS <valor_texto> (284) 28 42 44 46 108 109 110
BCOMA <valor_texto> (285) 43 45 47 112
BENT <valor_texto> (286) 51
BSAL <valor_texto> (287) 52 109
BSUMA <valor_texto> (288) 56 67
BMENOS <valor_texto> (289) 57 66
BPOR <valor_texto> (290) 58
BENTRE <valor_texto> (291) 59
BMOD <valor_texto> (292) 60
BDIV <valor_texto> (293) 61
BPARENTESIS_APERTURA <valor_texto> (294) 62 74 104 105 111
BPARENTESIS_CIERRE <valor_texto> (295) 62 74 104 105 111
BLITERAL_CADENA <valor_texto> (296) 34
BY <valor_texto> (297) 68
BO <valor_texto> (298) 69
BNO <valor_texto> (299) 70
BVERDADERO <valor_texto> (300) 72
BFALSO <valor_texto> (301) 73
BCONTINUAR <valor_texto> (302) 88
BDOS_PUNTOS_IGUAL <valor_texto> (303) 55 93 101
BSI <valor_texto> (304) 95
BENTONCES <valor_texto> (305) 95 96
BMIENTRAS <valor_texto> (306) 100
BFSI <valor_texto> (307) 95
BSINO <valor_texto> (308) 96
BHACER <valor_texto> (309) 100 101
BFMIENTRAS <valor_texto> (310) 100
BPARA <valor_texto> (311) 101
BHASTA <valor_texto> (312) 101
BFPARA <valor_texto> (313) 101
BACCION <valor_texto> (314) 102
BFUNCION <valor_texto> (315) 103
BDEV <valor_texto> (316) 103
BFFUNCION <valor_texto> (317) 103
BFACCION <valor_texto> (318) 102
BES <valor_texto> (319) 110
BIDENTIFICADORB <valor_texto> (320) 30 85
BLITERAL_ENTERO <valor_entero> (321) 31 65
BLITERAL_REAL <valor_doble> (322) 32 64
BMAYOR <valor_texto> (323) 76
BMENOR <valor_texto> (324) 77
BMAYORIGUAL <valor_texto> (325) 79
BMENORIGUAL <valor_texto> (326) 80
BDIFERENTE <valor_texto> (327) 78
UMINUS (328)
UBNO (329)


No terminales con las reglas donde aparecen

$accept (75)
    en la izquierda: 0
desc_algoritmo (76)
    en la izquierda: 1, en la derecha: 0
cabecera_alg <valor_texto> (77)
    en la izquierda: 2, en la derecha: 1
bloque_alg <valor_texto> (78)
    en la izquierda: 3, en la derecha: 1
decl_globales <valor_texto> (79)
    en la izquierda: 4 5 6, en la derecha: 2 4 5
decl_a_f <valor_texto> (80)
    en la izquierda: 7 8 9, en la derecha: 2 7 8
bloque <valor_texto> (81)
    en la izquierda: 10, en la derecha: 3 102 103
declaraciones <valor_texto> (82)
    en la izquierda: 11 12 13 14, en la derecha: 10 11 12 13
declaracion_tipo <valor_texto> (83)
    en la izquierda: 15, en la derecha: 4 11
declaracion_const <valor_texto> (84)
    en la izquierda: 16, en la derecha: 5 12
declaracion_var <valor_texto> (85)
    en la izquierda: 17, en la derecha: 13
lista_d_tipo <valor_texto> (86)
    en la izquierda: 18 19, en la derecha: 15 18
d_tipo <valor_texto> (87)
    en la izquierda: 20 21 22 23 24 25, en la derecha: 18 21 24 28
    42 44 46 105 108 109 110
expresion_t <valor_texto> (88)
    en la izquierda: 26 27, en la derecha: 21 23
lista_campos <valor_texto> (89)
    en la izquierda: 28 29, en la derecha: 20 28
lista_d_cte <valor_texto> (90)
    en la izquierda: 30 31 32 33 34 35, en la derecha: 16 30 31 32
    33 34
lista_d_var_entrada <valor_texto> (91)
    en la izquierda: 36 37, en la derecha: 36 51
lista_d_var_salida <valor_texto> (92)
    en la izquierda: 38 39, en la derecha: 38 52
lista_d_var <valor_texto> (93)
    en la izquierda: 40 41, en la derecha: 17 40 105
lista_id_entrada <valor_texto> (94)
    en la izquierda: 42 43, en la derecha: 36 43
lista_id_salida <valor_texto> (95)
    en la izquierda: 44 45, en la derecha: 38 45
lista_id <valor_texto> (96)
    en la izquierda: 46 47, en la derecha: 40 47 108 109 110
decl_ent_sal <valor_texto> (97)
    en la izquierda: 48 49 50, en la derecha: 2
decl_ent <valor_texto> (98)
    en la izquierda: 51, en la derecha: 48 49
decl_sal <valor_texto> (99)
    en la izquierda: 52, en la derecha: 49 50
expresion <e> (100)
    en la izquierda: 53 54, en la derecha: 26 83 93 94 95 96 100 101
    103 112 113
asignacion_booleana <valor_texto> (101)
    en la izquierda: 55, en la derecha: 90
exp_a <e> (102)
    en la izquierda: 56 57 58 59 60 61 62 63 64 65 66 67, en la derecha:
    53 56 57 58 59 60 61 62 66 67 75 76 77 78 79 80
exp_b <b> (103)
    en la izquierda: 68 69 70 71 72 73 74 75 76 77 78 79 80, en la derecha:
    30 55 68 69 70 74
operando <valor_texto> (104)
    en la izquierda: 81 82 83 84, en la derecha: 63 82 83 84 93
operando_booleano <valor_texto> (105)
    en la izquierda: 85, en la derecha: 55 71
instrucciones <valor_texto> (106)
    en la izquierda: 86 87, en la derecha: 10 86 95 96 100 101
instruccion <valor_texto> (107)
    en la izquierda: 88 89 90 91 92, en la derecha: 86 87
asignacion <e> (108)
    en la izquierda: 93 94, en la derecha: 89
alternativa <valor_texto> (109)
    en la izquierda: 95, en la derecha: 91
lista_opciones <valor_texto> (110)
    en la izquierda: 96 97, en la derecha: 95 96
iteracion <valor_texto> (111)
    en la izquierda: 98 99, en la derecha: 92
it_cota_exp <valor_texto> (112)
    en la izquierda: 100, en la derecha: 99
it_cota_fija <valor_texto> (113)
    en la izquierda: 101, en la derecha: 98
accion_d <valor_texto> (114)
    en la izquierda: 102, en la derecha: 7
funcion_d <valor_texto> (115)
    en la izquierda: 103, en la derecha: 8
a_cabecera <valor_texto> (116)
    en la izquierda: 104, en la derecha: 102
f_cabecera <valor_texto> (117)
    en la izquierda: 105, en la derecha: 103
d_par_form <valor_texto> (118)
    en la izquierda: 106 107, en la derecha: 104 106
d_p_form <valor_texto> (119)
    en la izquierda: 108 109 110, en la derecha: 106
funcion_ll <valor_texto> (120)
    en la izquierda: 111, en la derecha: 54
l_ll <valor_texto> (121)
    en la izquierda: 112 113, en la derecha: 111 112
M <quad> (122)
    en la izquierda: 114, en la derecha: 68 69


Estado 0

    0 $accept: . desc_algoritmo $end

    BALGORITMO  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: BALGORITMO . BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO BPUNTO

    BIDENTIFICADOR  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR . BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO BPUNTO

    BPUNTO_Y_COMA  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA . cabecera_alg bloque_alg BFALGORITMO BPUNTO

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    cabecera_alg       ir al estado 8
    decl_globales      ir al estado 9
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 6

   15 declaracion_tipo: BTIPO . lista_d_tipo BFTIPO BPUNTO_Y_COMA

    BIDENTIFICADOR  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   16 declaracion_const: BCONST . lista_d_cte BFCONST BPUNTO_Y_COMA

    BIDENTIFICADOR   desplazar e ir al estado 14
    BIDENTIFICADORB  desplazar e ir al estado 15

    $default  reduce usando la regla 35 (lista_d_cte)

    lista_d_cte  ir al estado 16


Estado 8

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg . bloque_alg BFALGORITMO BPUNTO

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7
    BVAR    desplazar e ir al estado 17

    $default  reduce usando la regla 14 (declaraciones)

    bloque_alg         ir al estado 18
    bloque             ir al estado 19
    declaraciones      ir al estado 20
    declaracion_tipo   ir al estado 21
    declaracion_const  ir al estado 22
    declaracion_var    ir al estado 23


Estado 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal BCOMENTARIO

    BACCION   desplazar e ir al estado 24
    BFUNCION  desplazar e ir al estado 25

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 26
    accion_d   ir al estado 27
    funcion_d  ir al estado 28


Estado 10

    4 decl_globales: declaracion_tipo . decl_globales

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales      ir al estado 29
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 11

    5 decl_globales: declaracion_const . decl_globales

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales      ir al estado 30
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 12

   18 lista_d_tipo: BIDENTIFICADOR . BIGUAL d_tipo BPUNTO_Y_COMA lista_d_tipo

    BIGUAL  desplazar e ir al estado 31


Estado 13

   15 declaracion_tipo: BTIPO lista_d_tipo . BFTIPO BPUNTO_Y_COMA

    BFTIPO  desplazar e ir al estado 32


Estado 14

   31 lista_d_cte: BIDENTIFICADOR . BIGUAL BLITERAL_ENTERO BPUNTO_Y_COMA lista_d_cte
   32            | BIDENTIFICADOR . BIGUAL BLITERAL_REAL BPUNTO_Y_COMA lista_d_cte
   33            | BIDENTIFICADOR . BIGUAL BLITERAL_CARACTER BPUNTO_Y_COMA lista_d_cte
   34            | BIDENTIFICADOR . BIGUAL BLITERAL_CADENA BPUNTO_Y_COMA lista_d_cte

    BIGUAL  desplazar e ir al estado 33


Estado 15

   30 lista_d_cte: BIDENTIFICADORB . BIGUAL exp_b BPUNTO_Y_COMA lista_d_cte

    BIGUAL  desplazar e ir al estado 34


Estado 16

   16 declaracion_const: BCONST lista_d_cte . BFCONST BPUNTO_Y_COMA

    BFCONST  desplazar e ir al estado 35


Estado 17

   17 declaracion_var: BVAR . lista_d_var BFVAR BPUNTO_Y_COMA

    BIDENTIFICADOR  desplazar e ir al estado 36

    $default  reduce usando la regla 41 (lista_d_var)

    lista_d_var  ir al estado 37
    lista_id     ir al estado 38


Estado 18

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg . BFALGORITMO BPUNTO

    BFALGORITMO  desplazar e ir al estado 39


Estado 19

    3 bloque_alg: bloque . BCOMENTARIO

    BCOMENTARIO  desplazar e ir al estado 40


Estado 20

   10 bloque: declaraciones . instrucciones

    BIDENTIFICADOR        desplazar e ir al estado 41
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BCONTINUAR            desplazar e ir al estado 45
    BSI                   desplazar e ir al estado 46
    BMIENTRAS             desplazar e ir al estado 47
    BPARA                 desplazar e ir al estado 48
    BIDENTIFICADORB       desplazar e ir al estado 49
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    expresion            ir al estado 52
    asignacion_booleana  ir al estado 53
    exp_a                ir al estado 54
    operando             ir al estado 55
    operando_booleano    ir al estado 56
    instrucciones        ir al estado 57
    instruccion          ir al estado 58
    asignacion           ir al estado 59
    alternativa          ir al estado 60
    iteracion            ir al estado 61
    it_cota_exp          ir al estado 62
    it_cota_fija         ir al estado 63
    funcion_ll           ir al estado 64


Estado 21

   11 declaraciones: declaracion_tipo . declaraciones

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7
    BVAR    desplazar e ir al estado 17

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones      ir al estado 65
    declaracion_tipo   ir al estado 21
    declaracion_const  ir al estado 22
    declaracion_var    ir al estado 23


Estado 22

   12 declaraciones: declaracion_const . declaraciones

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7
    BVAR    desplazar e ir al estado 17

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones      ir al estado 66
    declaracion_tipo   ir al estado 21
    declaracion_const  ir al estado 22
    declaracion_var    ir al estado 23


Estado 23

   13 declaraciones: declaracion_var . declaraciones

    BTIPO   desplazar e ir al estado 6
    BCONST  desplazar e ir al estado 7
    BVAR    desplazar e ir al estado 17

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones      ir al estado 67
    declaracion_tipo   ir al estado 21
    declaracion_const  ir al estado 22
    declaracion_var    ir al estado 23


Estado 24

  102 accion_d: BACCION . a_cabecera bloque BFACCION

    BIDENTIFICADOR  desplazar e ir al estado 68

    a_cabecera  ir al estado 69


Estado 25

  103 funcion_d: BFUNCION . f_cabecera bloque BDEV expresion BFFUNCION

    BIDENTIFICADOR  desplazar e ir al estado 70

    f_cabecera  ir al estado 71


Estado 26

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal BCOMENTARIO

    BENT  desplazar e ir al estado 72
    BSAL  desplazar e ir al estado 73

    decl_ent_sal  ir al estado 74
    decl_ent      ir al estado 75
    decl_sal      ir al estado 76


Estado 27

    7 decl_a_f: accion_d . decl_a_f

    BACCION   desplazar e ir al estado 24
    BFUNCION  desplazar e ir al estado 25

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 77
    accion_d   ir al estado 27
    funcion_d  ir al estado 28


Estado 28

    8 decl_a_f: funcion_d . decl_a_f

    BACCION   desplazar e ir al estado 24
    BFUNCION  desplazar e ir al estado 25

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 78
    accion_d   ir al estado 27
    funcion_d  ir al estado 28


Estado 29

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 4 (decl_globales)


Estado 30

    5 decl_globales: declaracion_const decl_globales .

    $default  reduce usando la regla 5 (decl_globales)


Estado 31

   18 lista_d_tipo: BIDENTIFICADOR BIGUAL . d_tipo BPUNTO_Y_COMA lista_d_tipo

    BIDENTIFICADOR        desplazar e ir al estado 79
    BTUPLA                desplazar e ir al estado 80
    BTABLA                desplazar e ir al estado 81
    BREF                  desplazar e ir al estado 82
    BTIPO_BASE            desplazar e ir al estado 83
    BLITERAL_CARACTER     desplazar e ir al estado 84
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    d_tipo       ir al estado 85
    expresion_t  ir al estado 86
    expresion    ir al estado 87
    exp_a        ir al estado 54
    operando     ir al estado 88
    funcion_ll   ir al estado 64


Estado 32

   15 declaracion_tipo: BTIPO lista_d_tipo BFTIPO . BPUNTO_Y_COMA

    BPUNTO_Y_COMA  desplazar e ir al estado 89


Estado 33

   31 lista_d_cte: BIDENTIFICADOR BIGUAL . BLITERAL_ENTERO BPUNTO_Y_COMA lista_d_cte
   32            | BIDENTIFICADOR BIGUAL . BLITERAL_REAL BPUNTO_Y_COMA lista_d_cte
   33            | BIDENTIFICADOR BIGUAL . BLITERAL_CARACTER BPUNTO_Y_COMA lista_d_cte
   34            | BIDENTIFICADOR BIGUAL . BLITERAL_CADENA BPUNTO_Y_COMA lista_d_cte

    BLITERAL_CARACTER  desplazar e ir al estado 90
    BLITERAL_CADENA    desplazar e ir al estado 91
    BLITERAL_ENTERO    desplazar e ir al estado 92
    BLITERAL_REAL      desplazar e ir al estado 93


Estado 34

   30 lista_d_cte: BIDENTIFICADORB BIGUAL . exp_b BPUNTO_Y_COMA lista_d_cte

    BIDENTIFICADOR        desplazar e ir al estado 94
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 95
    BNO                   desplazar e ir al estado 96
    BVERDADERO            desplazar e ir al estado 97
    BFALSO                desplazar e ir al estado 98
    BIDENTIFICADORB       desplazar e ir al estado 49
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    exp_a              ir al estado 99
    exp_b              ir al estado 100
    operando           ir al estado 88
    operando_booleano  ir al estado 101


Estado 35

   16 declaracion_const: BCONST lista_d_cte BFCONST . BPUNTO_Y_COMA

    BPUNTO_Y_COMA  desplazar e ir al estado 102


Estado 36

   46 lista_id: BIDENTIFICADOR . BDOS_PUNTOS d_tipo
   47         | BIDENTIFICADOR . BCOMA lista_id

    BDOS_PUNTOS  desplazar e ir al estado 103
    BCOMA        desplazar e ir al estado 104


Estado 37

   17 declaracion_var: BVAR lista_d_var . BFVAR BPUNTO_Y_COMA

    BFVAR  desplazar e ir al estado 105


Estado 38

   40 lista_d_var: lista_id . BPUNTO_Y_COMA lista_d_var

    BPUNTO_Y_COMA  desplazar e ir al estado 106


Estado 39

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO . BPUNTO

    BPUNTO  desplazar e ir al estado 107


Estado 40

    3 bloque_alg: bloque BCOMENTARIO .

    $default  reduce usando la regla 3 (bloque_alg)


Estado 41

   81 operando: BIDENTIFICADOR .
  111 funcion_ll: BIDENTIFICADOR . BPARENTESIS_APERTURA l_ll BPARENTESIS_CIERRE

    BPARENTESIS_APERTURA  desplazar e ir al estado 108

    $default  reduce usando la regla 81 (operando)


Estado 42

   67 exp_a: BSUMA . exp_a

    BIDENTIFICADOR        desplazar e ir al estado 94
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    exp_a     ir al estado 109
    operando  ir al estado 88


Estado 43

   66 exp_a: BMENOS . exp_a

    BIDENTIFICADOR        desplazar e ir al estado 94
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    exp_a     ir al estado 110
    operando  ir al estado 88


Estado 44

   62 exp_a: BPARENTESIS_APERTURA . exp_a BPARENTESIS_CIERRE

    BIDENTIFICADOR        desplazar e ir al estado 94
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    exp_a     ir al estado 111
    operando  ir al estado 88


Estado 45

   88 instruccion: BCONTINUAR .

    $default  reduce usando la regla 88 (instruccion)


Estado 46

   95 alternativa: BSI . expresion BENTONCES instrucciones lista_opciones BFSI

    BIDENTIFICADOR        desplazar e ir al estado 41
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    expresion   ir al estado 112
    exp_a       ir al estado 54
    operando    ir al estado 88
    funcion_ll  ir al estado 64


Estado 47

  100 it_cota_exp: BMIENTRAS . expresion BHACER instrucciones BFMIENTRAS

    BIDENTIFICADOR        desplazar e ir al estado 41
    BSUMA                 desplazar e ir al estado 42
    BMENOS                desplazar e ir al estado 43
    BPARENTESIS_APERTURA  desplazar e ir al estado 44
    BLITERAL_ENTERO       desplazar e ir al estado 50
    BLITERAL_REAL         desplazar e ir al estado 51

    expresion   ir al estado 113
    exp_a       ir al estado 54
    operando    ir al estado 88
    funcion_ll  ir al estado 64


Estado 48

  101 it_cota_fija: BPARA . BIDENTIFICADOR BDOS_PUNTOS_IGUAL expresion BHASTA expresion BHACER instrucciones BFPARA

    BIDENTIFICADOR  desplazar e ir al estado 114


Estado 49

   85 operando_booleano: BIDENTIFICADORB .

    $default  reduce usando la regla 85 (operando_booleano)


Estado 50

   65 exp_a: BLITERAL_ENTERO .

    $default  reduce usando la regla 65 (exp_a)


Estado 51

   64 exp_a: BLITERAL_REAL .

    $default  reduce usando la regla 64 (exp_a)


Estado 52

   94 asignacion: expresion .

    $default  reduce usando la regla 94 (asignacion)


Estado 53

   90 instruccion: asignacion_booleana .

    $default  reduce usando la regla 90 (instruccion)


Estado 54

   53 expresion: exp_a .
   56 exp_a: exp_a . BSUMA exp_a
   57      | exp_a . BMENOS exp_a
   58      | exp_a . BPOR exp_a
   59      | exp_a . BENTRE exp_a
   60      | exp_a . BMOD exp_a
   61      | exp_a . BDIV exp_a

    BSUMA   desplazar e ir al estado 115
    BMENOS  desplazar e ir al estado 116
    BPOR    desplazar e ir al estado 117
    BENTRE  desplazar e ir al estado 118
    BMOD    desplazar e ir al estado 119
    BDIV    desplazar e ir al estado 120

    $default  reduce usando la regla 53 (expresion)


Estado 55

   63 exp_a: operando .
   82 operando: operando . BPUNTO operando
   83         | operando . BCORCHETE_APERTURA expresion BCORCHETE_CIERRE
   84         | operando . BREF
   93 asignacion: operando . BDOS_PUNTOS_IGUAL expresion

    BPUNTO              desplazar e ir al estado 121
    BCORCHETE_APERTURA  desplazar e ir al estado 122
    BREF                desplazar e ir al estado 123
    BDOS_PUNTOS_IGUAL   desplazar e ir al estado 124

    $default  reduce usando la regla 63 (exp_a)


Estado 56

   55 asignacion_booleana: operando_booleano . BDOS_PUNTOS_IGUAL exp_b

    BDOS_PUNTOS_IGUAL  desplazar e ir al estado 125


Estado 57

   10 bloque: declaraciones instrucciones .

    $default  reduce usando la regla 10 (bloque)


Estado 58

   86 instrucciones: instruccion . BPUNTO_Y_COMA instrucciones
   87              | instruccion .

    BPUNTO_Y_COMA  desplazar e ir al estado 126

    $default  reduce usando la regla 87 (instrucciones)


Estado 59

   89 instruccion: asignacion .

    $default  reduce usando la regla 89 (instruccion)


Estado 60

   91 instruccion: alternativa .

    $default  reduce usando la regla 91 (instruccion)


Estado 61

   92 instruccion: iteracion .

    $default  reduce usando la regla 92 (instruccion)


Estado 62

   99 iteracion: it_cota_exp .

    $default  reduce usando la regla 99 (iteracion)


Estado 63

   98 iteracion: it_cota_fija .

    $default  reduce usando la regla 98 (iteracion)


Estado 64

   54 expresion: funcion_ll .

    $default  reduce usando la regla 54 (expresion)


Estado 65

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce usando la regla 11 (declaraciones)


Estado 66

   12 declaraciones: declaracion_const declaraciones .

    $default  reduce usando la regla 12 (declaraciones)


Estado 67

   13 declaraciones: declaracion_var declaraciones .

    $default  reduce usando la regla 13 (declaraciones)


Estado 68
